Hide overflow to prevent out of body scroll

--- a/src/client/app.scss
+++ b/src/client/app.scss
@@ -1,6 +1,7 @@
 html, body, #main {
     height: 100%;
     width: 100%; 
+    overflow: hidden;
 } 
  
 body, div {
